--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_screenutil: ^5.9.3
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
